data/derived/comb/progs/unify/prog4755.ml.out
Characters 59-60:
  wwhile(f, b);;
            ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
